@@ -44,9 +44,12 @@ elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
     if [ X"${DISTRO_CODENAME}" == X'bullseye' ]; then
         # Debian 11
         export PHP_VERSION='7.4'
-    else
+    elif [ X"${DISTRO_CODENAME}" == X'focal' ]; then
         # Ubuntu 20.04
         export PHP_VERSION='7.4'
+    elif [ X"${DISTRO_CODENAME}" == X'jammy' ]; then
+        # Ubuntu 22.04
+        export PHP_VERSION='8.1'
     fi
 
     export PHP_INI="/etc/php/${PHP_VERSION}/fpm/php.ini"
